syntax = "proto3";
option go_package = "/gen";

message VoteRequest {
}

message VoteReply {
}

message AppendEntryRequest {
}

message AppendEntryReply {
}

message Member {
    string name = 1;
    string address = 2;
    int32  port = 3;
}

service YadosService {
    rpc RequestVotes(VoteRequest) returns (VoteReply) {}
    rpc AppendEntries(AppendEntryRequest) returns (AppendEntryReply) {}
}
